Backport of: ------------------------------------------------------------  2599.161.3 Ingo Struewing      2009-07-21  Bug#20667 - Truncate table fails for a write locked table

TRUNCATE TABLE was not allowed under LOCK TABLES.

 The patch removes this restriction. mysql_truncate()
 does now handle that case.